src/objects/OrderLineItem__c.object
<CustomObject>
    <description>CORE adopted from ICOM</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AuxStoreId__c</fullName>
        <description>From Canonical XSD: Auxiliary store id. Identifies a sub-store of a main store (idnetified by StoreId at Order level)</description>
        <label>Auxiliary Store Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BindingType__c</fullName>
        <description>From Canonical XSD: Item binding type (may become enumeration in the future)</description>
        <label>Binding Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Promo_Description__c</fullName>
        <description>Promo description for any applied promotion.</description>
        <label>Promo Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Promo_Expiration_Date__c</fullName>
        <description>Expiration date for any applied promotion.</description>
        <label>Promo Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DealType__c</fullName>
        <label>Deal Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pilot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expansion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DeliverToAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>From Oracle requirements: Deliver to Customer Location</description>
        <label>End User/Deliver To Address</label>
        <referenceTo>Account_Addresses__c</referenceTo>
        <relationshipLabel>Order Line Items (Deliver to Address)</relationshipLabel>
        <relationshipName>Order_Line_Items3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DeliverToContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>From Oracle requirements</description>
        <label>End User/Deliver To Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Order Line Items (Deliver to Contact)</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deliver_To_Account__c</fullName>
        <formula>DeliverToAddress__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User/Deliver To Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliver_To_Address_1__c</fullName>
        <formula>DeliverToAddress__r.Address_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User/Deliver To Address 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliver_To_Address_2__c</fullName>
        <formula>DeliverToAddress__r.Address_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User/Deliver To Address 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliver_To_Address_Postal_Code__c</fullName>
        <formula>DeliverToAddress__r.Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User/Deliver To Address Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliver_To_Address_State__c</fullName>
        <formula>DeliverToAddress__r.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User/Deliver To Address State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliver_to_Address_City__c</fullName>
        <formula>DeliverToAddress__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User/Deliver To Address City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliver_to_Contact_Email__c</fullName>
        <formula>DeliverToContact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User/Deliver To Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliver_to_Contact_First_Name__c</fullName>
        <formula>DeliverToContact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User/Deliver To Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliver_to_Contact_Last_Name__c</fullName>
        <formula>DeliverToContact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User/Deliver To Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliver_to_Contact_Phone__c</fullName>
        <formula>DeliverToContact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User/Deliver To Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliver_to_Contact_Salutation__c</fullName>
        <formula>TEXT( DeliverToContact__r.Salutation )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User/Deliver To Contact Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliver_to_Customer_Location__c</fullName>
        <description>From Oracle requirements: DELIVER_TO_LOCATION = This corresponds to the location column in HZ_CUST_SITE_USES_ALL table for usage &quot;DELIVER_TO&quot; for a customer site. If this is not passed, Oracle defaults from header.</description>
        <formula>DeliverToAddress__r.Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End User/Deliver To Customer Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>Percentage discount on the Order line item</description>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DiscountedQuantity__c</fullName>
        <description>From Canonical XSD: Quantity before discount</description>
        <label>Discounted Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DurationUOM__c</fullName>
        <label>Duration Unit of Measure</label>
        <picklist>
            <picklistValues>
                <fullName>MO</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>CPQ Duration</description>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_OLI_Number__c</fullName>
        <description>for migration only</description>
        <externalId>true</externalId>
        <label>External_OLI_Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FreeShippingFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>From Canonical XSD</description>
        <label>Free Shipping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Id_18_character__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id (18-character)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Base_Instance_Number__c</fullName>
        <label>Install Base Instance Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Base_Tracked__c</fullName>
        <formula>Product__r.Install_Base_Tracked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Base Tracked</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceToAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>From Oracle requirements: Bill to Customer Location</description>
        <label>Invoice to Address</label>
        <referenceTo>Account_Addresses__c</referenceTo>
        <relationshipLabel>Order Line Items (Invoice to Address)</relationshipLabel>
        <relationshipName>Order_Line_Items2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InvoiceToContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>From Oracle requirements</description>
        <label>Invoice to Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Order Line Items (Invoice to Contact)</relationshipLabel>
        <relationshipName>Order_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_to_Contact_Email__c</fullName>
        <formula>InvoiceToContact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice to Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_to_Contact_First_Name__c</fullName>
        <formula>InvoiceToContact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice to Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_to_Contact_Last_Name__c</fullName>
        <formula>InvoiceToContact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice to Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_to_Contact_Phone__c</fullName>
        <formula>InvoiceToContact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice to Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_to_Contact_Salutation__c</fullName>
        <formula>TEXT( InvoiceToContact__r.Salutation )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice to Contact Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_to_Customer_Location__c</fullName>
        <description>From Oracle requirements: INVOICE_TO_LOCATION = This corresponds to the location column in HZ_CUST_SITE_USES_ALL table for usage &quot;BILL_TO&quot; for a customer site. If this is not passed, Oracle defaults from header.</description>
        <formula>InvoiceToAddress__r.Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice to Customer Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ItemDescription__c</fullName>
        <description>From Canonical XSD</description>
        <label>Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemIdentifier__c</fullName>
        <description>From Canonical XSD: An identifier for the item (e.g., ISBN - unique; Gardners - not necessarily)</description>
        <label>Item Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ItemQuantity__c</fullName>
        <description>From Canonical XSD: Positive integer</description>
        <label>Item Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ItemWeightUOM__c</fullName>
        <description>From Canonical XSD: ItemWeight should include Unit of Measure</description>
        <label>Item Weight Unit of Measure</label>
        <picklist>
            <picklistValues>
                <fullName>grams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ounces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>lbs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ItemWeight__c</fullName>
        <description>From Canonical XSD</description>
        <label>Item Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LineId__c</fullName>
        <description>From Canonical XSD: Unique Line ID</description>
        <label>Line ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineNo__c</fullName>
        <description>From Canonical XSD: Positive integer</description>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LineNumberText__c</fullName>
        <formula>TEXT(LineNo__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineTotal__c</fullName>
        <description>From Canonical XSD</description>
        <label>Line Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MediaType__c</fullName>
        <description>From Canonical XSD: E.g., Book/CD/DVD</description>
        <label>Media Type</label>
        <picklist>
            <picklistValues>
                <fullName>Book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DVD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NumberOfStudents__c</fullName>
        <description>From Oracle requirements</description>
        <label>Number of Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ordered_Item__c</fullName>
        <description>From Oracle requirements: ORDERED_ITEM is required by Oracle Stored Procedure. Description = Inventory Item Number</description>
        <label>Ordered Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PricePerStudent__c</fullName>
        <description>From Oracle requirements</description>
        <label>Price Per Student</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>From Canonical XSD: price after discount</description>
        <label>Price</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PricebookEntryId__c</fullName>
        <label>Pricebook Entry Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessingSystemLineItem__c</fullName>
        <label>Processing System Line Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessingSystemOrderID__c</fullName>
        <label>Processing System Order ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductforService__c</fullName>
        <description>In Cameleon, if a product that has been added to a quote has a mandatory item that is a Support or Service, the Item ID from the parent product should be placed in the ProductForService field (of the Support/Service line item).</description>
        <label>Product for Service</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceReferenceType__c</fullName>
        <description>From Oracle requirements: For a support line, this will be a constant value. Refer List of Values. The only value in scope for ICOM is Order</description>
        <label>Service Reference Type</label>
        <picklist>
            <picklistValues>
                <fullName>Order</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Install Base</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Contracts_Interface_Options__c</fullName>
        <label>Service Contracts Interface Options</label>
        <picklist>
            <picklistValues>
                <fullName>NO CONTRACT IMPACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPDATE CONTRACT COUNTS ONLY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ShipToAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>From Oracle requirements: Ship to Customer Location</description>
        <label>Ship to Address</label>
        <referenceTo>Account_Addresses__c</referenceTo>
        <relationshipLabel>Order Line Items (Ship to Address)</relationshipLabel>
        <relationshipName>Order_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShipToContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>From Oracle requirements</description>
        <label>Ship to Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Order Line Items (Ship to Contact)</relationshipLabel>
        <relationshipName>Order_Line_Items2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_to_Contact_Email__c</fullName>
        <formula>ShipToContact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship to Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Contact_First_Name__c</fullName>
        <formula>ShipToContact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship to Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Contact_Last_Name__c</fullName>
        <formula>ShipToContact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship to Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Contact_Phone__c</fullName>
        <formula>ShipToContact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship to Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Contact_Salutation__c</fullName>
        <formula>TEXT( ShipToContact__r.Salutation )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship to Contact Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Customer_Location__c</fullName>
        <description>From Oracle requirements: SHIP_TO_LOCATION = This corresponds to the location column in HZ_CUST_SITE_USES_ALL table for usage &quot;SHIP_TO&quot; for a customer site. If this is not passed, Oracle defaults from header</description>
        <formula>ShipToAddress__r.Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship to Customer Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippedQuantity__c</fullName>
        <label>Shipped Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipped_Item__c</fullName>
        <label>Shipped Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingAmount__c</fullName>
        <description>From Canonical XSD</description>
        <label>Shipping Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>StatusReason__c</fullName>
        <label>Status Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubscriptionEndDate__c</fullName>
        <description>From Canonical XSD</description>
        <label>Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SubscriptionStartDate__c</fullName>
        <description>From Canonical XSD</description>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TaxAmount__c</fullName>
        <description>From Canonical XSD</description>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TaxablePercent__c</fullName>
        <description>From Canonical XSD</description>
        <label>Taxable Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>From Canonical XSD</description>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UnitOfMeasure__c</fullName>
        <description>From Canonical XSD</description>
        <label>Unit of Measure</label>
        <picklist>
            <picklistValues>
                <fullName>Each</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Order Line Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>OrderLineItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Change_Order_Lines_Approved</fullName>
        <active>true</active>
        <errorConditionFormula>AND (Contains ($Profile.Name , &apos;Sales&apos;), OR (ISCHANGED( ItemQuantity__c), ISCHANGED( Product__c )),  ISPICKVAL (Order__r.Status__c,&apos;Approved&apos;))</errorConditionFormula>
        <errorMessage>You cannot modify an Order Line Item when the order is Approved</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_enter_discount_greater_than_100</fullName>
        <active>true</active>
        <description>Prevents a discount greater than 100% being entered.</description>
        <errorConditionFormula>Discount__c &gt;1</errorConditionFormula>
        <errorDisplayField>Discount__c</errorDisplayField>
        <errorMessage>Discount percent cannot exceed 100%</errorMessage>
    </validationRules>
</CustomObject>